--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
-    <string name="google_places_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCT8ToxWdULZx0iQxIBJ438LZn-Yn5eA4g</string>
+    <string name="google_places_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCT8ToxWdULZx0iQxIBJ438LZn-Yn5eA4g</string>
 </resources>
